--- a/content/projects/project_1.html
+++ b/content/projects/project_1.html
@@ -3,23 +3,23 @@ categories:
 - ""    #the front matter should be like the one found in, e.g., blog2.md. It cannot be like the normal Rmd we used
 - ""
 date: "2021-09-30"
-description: Project_1 # the title that will show up once someone gets to this page
+description: Scatterplot of election polls # the title that will show up once someone gets to this page
 draft: false
-image: pic.21 # save picture in \static\img\blogs. Acceptable formats= jpg, jpeg, or png . Your iPhone pics wont work
+image: pic07.jpg # save picture in \static\img\blogs. Acceptable formats= jpg, jpeg, or png . Your iPhone pics wont work
 
 keywords: ""
 slug: project_1 # slug is the shorthand URL address... no spaces plz
-title: Project_1
+title: Scatterplot of election polls
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<div id="challenge-2-opinion-polls-for-the-2021-german-elections" class="section level1">
-<h1>Challenge 2: Opinion polls for the 2021 German elections</h1>
-<p>The Guardian newspaper has an <a href="https://www.theguardian.com/world/2021/aug/20/german-election-poll-tracker-who-will-be-the-next-chancellor">election poll tracker for the upcoming German election</a>. The list of the opinion polls since Jan 2021 can be found at <a href="https://en.wikipedia.org/wiki/Opinion_polling_for_the_2021_German_federal_election">Wikipedia</a> and we will reproduce a graph similar to the one produced by the Guardian using the data from the wikipedia page .</p>
-<p><strong>Scraping Wikipedia page</strong></p>
-<p>First, we scrape the wikipedia page and import the table in a dataframe.</p>
+<div id="opinion-polls-for-the-2021-german-elections" class="section level1">
+<h1>Opinion polls for the 2021 German elections</h1>
+<p>The goal is to create a chart that synthesizes the opinion polls for the 2021 German election, such as the one <a href="https://www.theguardian.com/world/2021/aug/20/german-election-poll-tracker-who-will-be-the-next-chancellor">the one</a> created by the Guardian newspaper.</p>
+<p><strong>Step 1: Scraping the data from the Wikipedia page</strong></p>
+<p>We scrape the wikipedia page and import the table in a dataframe.</p>
 <pre class="r"><code>url &lt;- &quot;https://en.wikipedia.org/wiki/Opinion_polling_for_the_2021_German_federal_election&quot;
 
 # similar graphs and analyses can be found at 
@@ -55,8 +55,8 @@ german_election_polls &lt;- polls[[1]] %&gt;% # the first table on the page cont
          month = month(end_date),
          week = isoweek(end_date)
          )</code></pre>
-<p><strong>Building Chart</strong></p>
-<p>Then we reproduce the chart with the new data.</p>
+<p><strong>Step 2: Building the Chart</strong></p>
+<p>Then, we create the chart with the data scrapped from Wikipedia.</p>
 <pre class="r"><code>library(plotly)
 #To be able to plot all the German parties&#39; polling scores on the y axis by date, we need to rework our data set so as to have the date as a function of all the parties&#39; polling score. To to this, we first have to define variables for each party&#39; polling score.
 SPD &lt;- german_election_polls$spd
@@ -92,4 +92,6 @@ theme(axis.title.x = element_text(size = 12, angle = 0)) +
 theme(axis.title.y = element_text(size = 12, angle = 90)) +
   NULL</code></pre>
 <p><img src="/projects/project_1_files/figure-html/making_challenge_2_plot-1.png" width="648" style="display: block; margin: auto;" /></p>
+<p><strong>Final output</strong></p>
+<p>We obtained the synthesis of opinion polls for the 2021 German election. As the polls predicted, Olaf Scholz’ SPD and Armin Laschet’s CDU were very close, and the SPD won by a small margin.</p>
 </div>
