--- a/content/blogs/about_me.html
+++ b/content/blogs/about_me.html
@@ -3,13 +3,13 @@ categories:
 - ""    #the front matter should be like the one found in, e.g., blog2.md. It cannot be like the normal Rmd we used
 - ""
 date: "2021-09-30"
-description: Returns of financial stocks analysis # the title that will show up once someone gets to this page
+description: About me # the title that will show up once someone gets to this page
 draft: false
-image: pic_lbs # save picture in \static\img\blogs. Acceptable formats= jpg, jpeg, or png . Your iPhone pics wont work
+image: pic_lbs.jpg # save picture in \static\img\blogs. Acceptable formats= jpg, jpeg, or png . Your iPhone pics wont work
 
 keywords: ""
 slug: about_me # slug is the shorthand URL address... no spaces plz
-title: Returns of financial stocks analysis
+title: About me
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
@@ -29,6 +29,6 @@ title: Returns of financial stocks analysis
 <p><strong>My hobbies</strong></p>
 <p>I like music, especially funk, soul, and jazz. I also do a lot of sport and like very much physical exercise. Finally, I enjoy reading about politics and economics. Do not hesitate to reach out!</p>
 <p><strong>My resume</strong></p>
-<pre class="r"><code>knitr::include_graphics(here::here(&quot;data&quot;, &quot;HadrienPistre_resume.png&quot;), error = FALSE)</code></pre>
-<p><img src="/Users/hadrien_pistre/Desktop/Google%20Drive/01.%20LBS/02.%20Courses/02.%20Data%20Analytics/Website/my_website/data/HadrienPistre_resume.png" width="100%" style="display: block; margin: auto;" /></p>
+<pre class="r"><code>knitr::include_graphics(&quot;/img/HadrienPistre_resume.jpg&quot;,error =FALSE)</code></pre>
+<p><img src="/img/HadrienPistre_resume.jpg" width="100%" style="display: block; margin: auto;" /></p>
 </div>
