--- a/content/blogs/al_gore.html
+++ b/content/blogs/al_gore.html
@@ -7,7 +7,7 @@ description: Al Gore interview on "Earth in the Balance" (1992)
 draft: false
 image: blog_3.jpg
 keywords: ""
-slug: magna
+slug: al_gore
 title: YouTube - Interview
 ---
 
@@ -15,8 +15,8 @@ title: YouTube - Interview
 <link href="/rmarkdown-libs/vembedr/css/vembedr.css" rel="stylesheet" />
 
 
-<p><strong>YouTube - Emmanuel Macron lance un vaste plan de reconquête industrielle</strong></p>
-<p>An interesting YouTube video about Al Gore’s life experience and his interest in the environment as soon as 1992.</p>
+<p><strong>YouTube - Al Gore interview on “Earth in the Balance” (1992)</strong></p>
+<p>An interesting YouTube video about Al Gore’s life-changing experience and his interest in fighting the climate change as soon as 1992.</p>
 <div class="vembedr">
 <div>
 <iframe src="https://www.youtube.com/embed/_pTQekGEMI0" width="533" height="300" frameborder="0" allowfullscreen=""></iframe>
