--- a/content/blogs/_index.html
+++ b/content/blogs/_index.html
@@ -9,4 +9,4 @@ title: Blog
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p>All my projects about R and interests about economics and politics.</p>
+<p>All the R projects on which I worked as well as content about my interests in economics and politics.</p>
