--- a/content/blogs/blog3.html
+++ b/content/blogs/blog3.html
@@ -15,4 +15,4 @@ title: The Guardian - Article
 
 
 <p><strong>The Guardian - Steel will be vital to the green revolution, but our industry needs help to change</strong></p>
-<p>An interesting article from <a href="https://www.theguardian.com/commentisfree/2021/oct/20/steel-green-revolution-industry-government-investment-technology-jobs-turbines-electric-cars">The Guardian about the future of the UK steel industry in a sustainable future</a> (for French audience).</p>
+<p>An interesting article from <a href="https://www.theguardian.com/commentisfree/2021/oct/20/steel-green-revolution-industry-government-investment-technology-jobs-turbines-electric-cars">The Guardian about the future of the UK steel industry in a sustainable future</a>.</p>
