--- a/content/blogs/project_3.html
+++ b/content/blogs/project_3.html
@@ -3,7 +3,7 @@ categories:
 - ""    #the front matter should be like the one found in, e.g., blog2.md. It cannot be like the normal Rmd we used
 - ""
 date: "2021-09-30"
-description: Scatterplot of election polls # the title that will show up once someone gets to this page
+description: Synthesis of election polls for the 2021 German election # the title that will show up once someone gets to this page
 draft: false
 image: pic_project_3.jpg # save picture in \static\img\blogs. Acceptable formats= jpg, jpeg, or png . Your iPhone pics wont work
 
@@ -15,8 +15,8 @@ title: Scatterplot of election polls
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<div id="opinion-polls-for-the-2021-german-elections" class="section level1">
-<h1>Opinion polls for the 2021 German elections</h1>
+<div id="synthesis-of-election-polls-for-the-2021-german-election" class="section level1">
+<h1>Synthesis of election polls for the 2021 German election</h1>
 <p>The goal is to create a chart that synthesizes the opinion polls for the 2021 German election, such as the one <a href="https://www.theguardian.com/world/2021/aug/20/german-election-poll-tracker-who-will-be-the-next-chancellor">the one</a> created by the Guardian newspaper.</p>
 <p><strong>Step 1: Scraping the data from the Wikipedia page</strong></p>
 <p>We scrape the wikipedia page and import the table in a dataframe.</p>
