--- a/content/blogs/about_me.html
+++ b/content/blogs/about_me.html
@@ -3,7 +3,7 @@ categories:
 - ""    #the front matter should be like the one found in, e.g., blog2.md. It cannot be like the normal Rmd we used
 - ""
 date: "2021-09-30"
-description: About me # the title that will show up once someone gets to this page
+description: What has been my journey so far # the title that will show up once someone gets to this page
 draft: false
 image: pic_lbs.jpg # save picture in \static\img\blogs. Acceptable formats= jpg, jpeg, or png . Your iPhone pics wont work
 
@@ -15,8 +15,8 @@ title: About me
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<div id="about-me" class="section level1">
-<h1>About me</h1>
+<div id="what-has-been-my-journey-so-far" class="section level1">
+<h1>What has been my journey so far</h1>
 <p><strong>What I did before LBS</strong></p>
 <p>Hello, my name is Hadrien. I am from Paris, France, in which I spent most of my life. After high school school, I did a <em>Classe Préparatoire</em> (<a href="https://en.wikipedia.org/wiki/Classe_pr%C3%A9paratoire_aux_grandes_%C3%A9coles">preparatory class</a>) which is a two-year intensive program to enter French business schools. I subsequently joined a business school in Bordeaux. During my studies in France, I did two internships: the first one at <strong>EY Paris</strong> as a financial auditor, and the second one in a consultancy in Paris as a financial consultant.</p>
 <p><strong>Why I joinded LBS</strong></p>
@@ -29,6 +29,5 @@ title: About me
 <p><strong>My hobbies</strong></p>
 <p>I like music, especially funk, soul, and jazz. I also do a lot of sport and like very much physical exercise. Finally, I enjoy reading about politics and economics. Do not hesitate to reach out!</p>
 <p><strong>My resume</strong></p>
-<pre class="r"><code>knitr::include_graphics(&quot;/img/HadrienPistre_resume.jpg&quot;,error =FALSE)</code></pre>
 <p><img src="/img/HadrienPistre_resume.jpg" width="100%" style="display: block; margin: auto;" /></p>
 </div>
