--- a/content/blogs/project_2.html
+++ b/content/blogs/project_2.html
@@ -3,7 +3,7 @@ categories:
 - ""    #the front matter should be like the one found in, e.g., blog2.md. It cannot be like the normal Rmd we used
 - ""
 date: "2021-09-30"
-description: Yield curve inversion # the title that will show up once someone gets to this page
+description: Breakdown and analysis of the GDPs of major economies # the title that will show up once someone gets to this page
 draft: false
 image: pic_project_2.jpg # save picture in \static\img\blogs. Acceptable formats= jpg, jpeg, or png . Your iPhone pics wont work
 
@@ -15,8 +15,8 @@ title: GDP components analysis
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<div id="gdp-components-over-time-and-among-countries" class="section level1">
-<h1>GDP components over time and among countries</h1>
+<div id="breakdown-and-analysis-of-the-gdps-of-major-economies" class="section level1">
+<h1>Breakdown and analysis of the GDPs of major economies</h1>
 <p>The main components of gross domestic product, GDP are personal consumption (C), business investment (I), government spending (G) and net exports (exports - imports). You can read more about GDP and the different approaches in calculating at the <a href="https://en.wikipedia.org/wiki/Gross_domestic_product">Wikipedia GDP page</a>.</p>
 <p>The GDP data we will look at is from the <a href="https://unstats.un.org/unsd/snaama/Downloads">United Nations’ National Accounts Main Aggregates Database</a>, which contains estimates of total GDP and its components for all countries from 1970 to today. We will look at how GDP and its components have changed over time, and compare different countries and how much each component contributes to that country’s GDP. The file we will work with is <a href="http://unstats.un.org/unsd/amaapi/api/file/6">GDP and its breakdown at constant 2010 prices in US Dollars</a>.</p>
 <pre class="r"><code>UN_GDP_data  &lt;- read_excel(here::here(&quot;data&quot;, &quot;Download-GDPconstant-USD-countries.xls&quot;), # Excel filename
