--- a/content/blogs/al_gore.html
+++ b/content/blogs/al_gore.html
@@ -15,10 +15,12 @@ title: YouTube - Interview
 <link href="/rmarkdown-libs/vembedr/css/vembedr.css" rel="stylesheet" />
 
 
-<p><strong>YouTube - Al Gore interview on “Earth in the Balance” (1992)</strong></p>
-<p>An interesting YouTube video about Al Gore’s life-changing experience and his interest in fighting the climate change as soon as 1992.</p>
+<div id="youtube---al-gore-interview-on-earth-in-the-balance-1992" class="section level1">
+<h1>YouTube - Al Gore interview on “Earth in the Balance” (1992)</h1>
+<p>An interesting YouTube video about Al Gore’s life-changing experience and his interest in fighting the climate change as soon as 1992, depicted in his book “Earth in the Balance” (1992).</p>
 <div class="vembedr">
 <div>
 <iframe src="https://www.youtube.com/embed/_pTQekGEMI0" width="533" height="300" frameborder="0" allowfullscreen=""></iframe>
+</div>
 </div>
 </div>
