--- a/content/blogs/blog1.html
+++ b/content/blogs/blog1.html
@@ -14,7 +14,5 @@ title: Financial Times - Article
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<div id="financial-times---evergrande-share-trading-halt-pushes-hkex-suspensions-to-record-61bn" class="section level1">
-<h1>Financial Times - Evergrande share trading halt pushes HKEX suspensions to record $61bn</h1>
+<p><strong>Financial Times - Evergrande share trading halt pushes HKEX suspensions to record $61bn</strong></p>
 <p>An interesting article from the <a href="https://www.ft.com/content/b3bb2c37-252b-430d-99dc-bde7b3d2f179">Financial Times about the Evergrande scandal</a>.</p>
-</div>
