--- a/content/blogs/blog2.html
+++ b/content/blogs/blog2.html
@@ -14,7 +14,5 @@ title: Le Figaro - Article
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<div id="le-figaro---emmanuel-macron-lance-un-vaste-plan-de-reconquête-industrielle" class="section level1">
-<h1>Le Figaro - Emmanuel Macron lance un vaste plan de reconquête industrielle</h1>
+<p><strong>Le Figaro - Emmanuel Macron lance un vaste plan de reconquête industrielle</strong></p>
 <p>An interesting article from <a href="https://www.lefigaro.fr/conjoncture/emmanuel-macron-lance-un-vaste-plan-de-reconquete-industrielle-20211012">Le Figaro about the France 2030 plan</a> (for French-speaking audience).</p>
-</div>
